fixed overflowing video

--- a/dapp/src/style/App.css
+++ b/dapp/src/style/App.css
@@ -23,6 +23,8 @@ body {
   font-weight: 800;
   color: #ffffff;
   text-align: left;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body{
